# shar

./: .env.example  .gitattributes  .gitignore  AGENTS.md  Cargo.toml  LICENSE  README.md  cspell.json
src/fbx/: Cargo.toml  README.md
src/fbx/python/shar_blender_review/: helper_template.py
src/fbx/src/: adapters.rs  application.rs  lib.rs  ports.rs  semantic_character_texture_cli.rs
src/fbx/src/adapters/: driven.rs  driving.rs
src/fbx/src/application/: build_scene.rs  export_model.rs  package_profile.rs  planning.rs  report.rs
src/fbx/src/domain/: README.md  domain.rs
src/fbx/src/ports/: README.md  artifact_sink.rs  component_source.rs  package_index.rs  scene_writer.rs
src/fbx/tests/: binary_animation_writer.rs  binary_character_writer.rs  binary_material_variants.rs  binary_model_writer.rs  binary_only_contract.rs  binary_structural_guide_writer.rs  blender_review_helper.rs  constructor_identity_validation.rs  decoded_animation_source.rs  decoded_billboard_source.rs  decoded_component_source.rs  decoded_material_source.rs  decoded_mesh_source.rs  decoded_padded_shader.rs  decoded_rigid_prop_source.rs  decoded_skin_source.rs  decoded_texture_source.rs  decoded_vertex_color.rs  deterministic_constructor_validation.rs  domain_validation.rs  generated_package_index.rs  material_binding.rs  matrix_inverse.rs  maya_import_helper.rs  mesh_asset.rs  package_evidence.rs  package_index.rs  port_identity_validation.rs  primitive_group.rs  semantic_body_texture.rs  semantic_body_texture_patterned.rs  semantic_body_texture_rejections.rs  semantic_eye_texture_png.rs
src/fbx/tests/common/: binary_artifact.rs  semantic_body.rs  semantic_eye.rs  semantic_patterned_body.rs
src/game-manifest/: Cargo.toml
src/game-manifest/src/: adapters.rs  application.rs  lib.rs  ports.rs
src/game-manifest/src/adapters/: driven.rs  driving.rs
src/game-manifest/src/application/: diagnostic_path.rs  error.rs  generate_expanded.rs  generate_manifest.rs  path_evidence.rs  rcf_evidence.rs  structural_audit.rs  validate_manifest.rs
src/game-manifest/src/domain/: classification.rs  domain.rs  json.rs
src/game-manifest/src/ports/: game_tree.rs  text_artifact_store.rs
src/game-manifest/tests/: audit_cli_contract.rs  count_by_dir_ext.rs  dir_count_jsonl.rs  dir_count_parse.rs  error_display.rs  expanded_backup_contract.rs  expanded_classification.rs  expanded_cli_contract.rs  expanded_duplicate_evidence.rs  expanded_existing_output.rs  expanded_output_contract.rs  expanded_output_location.rs  expanded_validation_order.rs  generate_classification.rs  generate_classification_resources.rs  generate_cli_contract.rs  minimum_path_evidence.rs  path_helpers.rs  validate_cli.rs  validate_cli_contract.rs  validation_order.rs  validation_path_evidence.rs
src/lmlm/: Cargo.toml
src/lmlm/src/: adapters.rs  application.rs  diagnostic.rs  lib.rs  main.rs  ports.rs
src/lmlm/src/adapters/: driven.rs  driving.rs
src/lmlm/src/application/: extract_archive.rs
src/lmlm/src/domain/: binary.rs  container.rs  domain.rs  entry.rs  error.rs  layout.rs  name.rs  package.rs  parser.rs  payload.rs  table.rs  tests.rs  validation.rs
src/lmlm/src/ports/: archive_source.rs  entry_sink.rs
src/lmlm/tests/: cli_run_error.rs  extract_archive_error.rs
src/mcp/: README.md  pyproject.toml  pytest.ini
src/mcp/src/: py.typed
src/mcp/src/adapters/: __init__.py
src/mcp/src/application/: __init__.py  service.py  skill_export.py
src/mcp/src/domain/: __init__.py  catalog.py  endpoint.py  errors.py  json_types.py  session.py  skill_categories.py  skill_documents.py  skill_revision.py  skill_taxonomy.py  skill_toolsets_animation.py  skill_toolsets_assets.py  skill_toolsets_core.py  skill_toolsets_effects.py  skill_toolsets_gameplay_ai.py  skill_toolsets_world_ui.py  tool_identity.py  tool_outcome.py
src/mcp/src/ports/: __init__.py  skill_documents.py  transport.py  unreal_mcp_version.py
src/mcp/tests/: __init__.py  fake_unreal_protocol.py  fake_unreal_server.py  fake_unreal_tools.py  manual_skill_fixture.py  skill_catalog_fixture.py  test_cli.py  test_domain.py  test_generated_skill_tree.py  test_http_payload.py  test_http_request.py  test_http_status.py  test_json_rpc_request.py  test_project_configuration.py  test_response_validation.py  test_service_cleanup.py  test_skill_manual_fields.py  test_skill_manual_review.py  test_skill_rendering.py  test_skill_store.py  test_tool_identity.py  test_tool_outcome.py  test_transport.py  test_unreal_mcp_version.py  test_workflow_skills.py
src/p3d/: Cargo.toml
src/p3d/src/: adapters.rs  application.rs  lib.rs  main.rs  ports.rs  schema.rs
src/p3d/src/adapters/: driven.rs  driving.rs
src/p3d/src/application/: export_batch.rs  export_package.rs
src/p3d/src/decompiler/: mod.rs
src/p3d/src/domain/: batch.rs  chunk.rs  domain.rs  extract.rs
src/p3d/tests/: chunk.rs  extract.rs  package.rs  reader.rs
src/pipeline/: Cargo.toml
src/pipeline/src/: adapters.rs  application.rs  domain.rs  lib.rs  main.rs  ports.rs
src/pipeline/tests/: local_route_guard.rs  machine_specific_path_guard.rs
src/rcf/: Cargo.toml
src/rcf/src/: adapters.rs  application.rs  lib.rs  main.rs  ports.rs
src/rcf/src/adapters/: driven.rs  (+1 more)
src/rcf/tests/: archive_parser.rs  declared_header_offset.rs  extraction_preflight.rs  extractor_reader.rs  filesystem_reader.rs  filesystem_sink.rs  source_text_integrity.rs
src/rmv/: Cargo.toml
src/rmv/src/: adapters.rs  application.rs  lib.rs  main.rs  ports.rs
src/rsd/: Cargo.toml
src/rsd/src/: adapters.rs  application.rs  lib.rs  main.rs  ports.rs
src/rsd/tests/: compact_pcm.rs  error_display.rs  export_report_validation.rs  filesystem_export.rs  hard_link_identity.rs  header_validation.rs  payload_validation.rs  radp_state.rs  wav_validation.rs
src/rtf/: Cargo.toml
src/rtf/src/: adapters.rs  application.rs  lib.rs  main.rs  ports.rs
src/rtf/tests/: document_break_controls.rs  font_charsets.rs  malformed_binary_controls.rs  malformed_hex_controls.rs  metadata_destinations.rs  special_character_controls.rs  unicode_character_controls.rs
(+2266 files in other folders)
