[package]
name = "rtf"
version.workspace = true
edition = "2024"
license = "MIT"
description = "From-scratch RTF to Markdown converter for the pipeline."
publish = false

[dependencies]
# schoenwald-cli centralizes process arguments, ordered streams, exact stdout documents, newline handling, and exit-code mapping for the RTF driving adapter.
schoenwald-cli = { path = "../cli" }
# schoenwald-filesystem centralizes complete source snapshots and complete Markdown publication while timestamp provenance remains RTF-specific.
schoenwald-filesystem = { path = "../filesystem" }


[lib]
name = "rtf"
path = "src/lib.rs"

[[bin]]
name = "rtf-to-md"
path = "src/main.rs"
